Further dev setup

--- a/src/index.html
+++ b/src/index.html
@@ -5,16 +5,14 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>McLisak Ui-Components</title>
-	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 	<h1>Ui Components</h1>
 	<ul>
 		<li>
-			<a href="/test1">Test1</a>
+			<a href="/text-shadow">Text Shadow</a>
 		</li>
 	</ul>
 
-	<script src="index.js"></script>
 </body>
 </html>
