--- a/src/text-shadow/index.html
+++ b/src/text-shadow/index.html
@@ -4,15 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Nice Text Shadow</title>
-    <link rel="stylesheet" href="index.css" />
+    <title>Text Shadow - UI components - McLisak</title>
   </head>
   <body>
     <div class="wrapper">
-      <div id="text-shadow">
-        <h1>text-shadow</h1>
-      </div>
+      <h1 id="text-shadow" data-text="TEXT SHADOW">TEXT SHADOW</h1>
     </div>
-    <script src="index.js"></script>
   </body>
 </html>
