--- a/src/index.html
+++ b/src/index.html
@@ -1,18 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>McLisak Ui-Components</title>
-</head>
-<body>
-	<h1>Ui Components</h1>
-	<ul>
-		<li>
-			<a href="/text-shadow">Text Shadow</a>
-		</li>
-	</ul>
-
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>McLisak Ui-Components</title>
+  </head>
+  <body>
+    <div class="wrapper">
+      <h1>UI Components</h1>
+      <ul>
+        <li><a href="/text-shadow">Text Shadow</a></li>
+        <li><a href="/text-shadow">Text Shadow</a></li>
+        <li><a href="/text-shadow">Text Shadow</a></li>
+        <li><a href="/text-shadow">Text Shadow</a></li>
+        <li><a href="/text-shadow">Text Shadow</a></li>
+        <li><a href="/text-shadow">Text Shadow</a></li>
+        <li><a href="/text-shadow">Text Shadow</a></li>
+        <li><a href="/text-shadow">Text Shadow</a></li>
+        <li><a href="/text-shadow">Text Shadow</a></li>
+        <li><a href="/text-shadow">Text Shadow</a></li>
+        <li><a href="/text-shadow">Text Shadow</a></li>
+        <li><a href="/text-shadow">Text Shadow</a></li>
+        <li><a href="/text-shadow">Text Shadow</a></li>
+        <li><a href="/text-shadow">Text Shadow</a></li>
+        <li><a href="/text-shadow">Text Shadow</a></li>
+        <li><a href="/text-shadow">Text Shadow</a></li>
+      </ul>
+    </div>
+  </body>
 </html>
