--- a/src/paper-cutout/index.html
+++ b/src/paper-cutout/index.html
@@ -4,15 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>McLisak Ui-Components</title>
+    <title>Paper Cutout - UI components - McLisak</title>
   </head>
   <body>
     <div class="wrapper">
-      <h1>UI Components</h1>
-      <ul>
-        <li><a href="/text-shadow">Text Shadow</a></li>
-        <li><a href="/paper-cutout">Paper Cutout</a></li>
-      </ul>
+      <h1 class="paper-cut" text="CUT">CUT</h1>
     </div>
   </body>
 </html>
