--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,10 @@
     <div class="wrapper">
       <h1>UI Components</h1>
       <ul>
-        <li><a href="/text-shadow">Text Shadow</a></li>
-        <li><a href="/paper-cutout">Paper Cutout</a></li>
+        <li><a class="btn" href="/text-shadow">Text Shadow</a></li>
+        <li><a class="btn" href="/paper-cutout">Paper Cutout</a></li>
+        <li><a class="btn" href="/notification">Notification</a></li>
+        <li><a class="btn" href="/swipe-panes">Swipe Panes</a></li>
       </ul>
     </div>
   </body>
