--- a/src/swipe-panes/index.html
+++ b/src/swipe-panes/index.html
@@ -2,13 +2,77 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, userscalable=no" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Swipe Panes - UI components - McLisak</title>
   </head>
   <body>
-    <div class="wrapper">
-      <h1>Pane</h1>
+    <div class="panes">
+      <div class="pane" style="background: linear-gradient(to top left, rgb(155, 155, 155), rgb(212, 212, 212))">
+        <h1>Pane 1</h1>
+      </div>
+      <div class="pane" style="background: linear-gradient(to top left, rgb(155, 155, 155), rgb(212, 212, 212))">
+        <h1>Pane 2</h1>
+        <h2>Longer content?</h2>
+        <h3>No problem</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor ipsam fugiat ullam quam recusandae eum dicta,
+          dolore architecto maiores aspernatur? Aliquam ratione suscipit quibusdam placeat quidem pariatur dolore ut
+          quia beatae ipsam est recusandae autem maxime soluta harum alias inventore, animi laudantium culpa
+          voluptatibus architecto iste incidunt quaerat! Tempora a commodi provident dicta repudiandae exercitationem,
+          veniam eos illum earum praesentium nam reiciendis. Corporis voluptate reprehenderit veniam totam nobis maiores
+          incidunt, quibusdam necessitatibus odit suscipit sequi in. Consequatur iusto odit praesentium? Molestiae
+          voluptatum voluptatibus error soluta consequuntur blanditiis dolorum odit aut hic unde fuga excepturi eum
+          veritatis quas sequi officia, placeat esse pariatur rerum. Quas nihil labore hic error architecto, laudantium
+          atque neque recusandae obcaecati ad esse, dicta tempora velit optio, autem ratione magni voluptatem inventore
+          dolore nobis nesciunt numquam totam. Reiciendis magni optio illum pariatur obcaecati quos tenetur quia a odit
+          beatae enim sunt, saepe molestias libero ut voluptas delectus tempora vel voluptate in nemo temporibus
+          quibusdam! Dolorem, possimus nesciunt! Consectetur voluptate ab minus tempore, id fugiat sint, hic eos
+          consequuntur sequi eum quidem veritatis. Laboriosam officiis impedit fugit, iure nesciunt aspernatur vel
+          commodi tempora nobis blanditiis, optio aperiam ipsam pariatur assumenda dolor dignissimos aliquam.
+          Cupiditate, dolorem. Ea, mollitia numquam!
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor ipsam fugiat ullam quam recusandae eum dicta,
+          dolore architecto maiores aspernatur? Aliquam ratione suscipit quibusdam placeat quidem pariatur dolore ut
+          quia beatae ipsam est recusandae autem maxime soluta harum alias inventore, animi laudantium culpa
+          voluptatibus architecto iste incidunt quaerat! Tempora a commodi provident dicta repudiandae exercitationem,
+          veniam eos illum earum praesentium nam reiciendis. Corporis voluptate reprehenderit veniam totam nobis maiores
+          incidunt, quibusdam necessitatibus odit suscipit sequi in. Consequatur iusto odit praesentium? Molestiae
+          voluptatum voluptatibus error soluta consequuntur blanditiis dolorum odit aut hic unde fuga excepturi eum
+          veritatis quas sequi officia, placeat esse pariatur rerum. Quas nihil labore hic error architecto, laudantium
+          atque neque recusandae obcaecati ad esse, dicta tempora velit optio, autem ratione magni voluptatem inventore
+          dolore nobis nesciunt numquam totam. Reiciendis magni optio illum pariatur obcaecati quos tenetur quia a odit
+          beatae enim sunt, saepe molestias libero ut voluptas delectus tempora vel voluptate in nemo temporibus
+          quibusdam! Dolorem, possimus nesciunt! Consectetur voluptate ab minus tempore, id fugiat sint, hic eos
+          consequuntur sequi eum quidem veritatis. Laboriosam officiis impedit fugit, iure nesciunt aspernatur vel
+          commodi tempora nobis blanditiis, optio aperiam ipsam pariatur assumenda dolor dignissimos aliquam.
+          Cupiditate, dolorem. Ea, mollitia numquam!
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor ipsam fugiat ullam quam recusandae eum dicta,
+          dolore architecto maiores aspernatur? Aliquam ratione suscipit quibusdam placeat quidem pariatur dolore ut
+          quia beatae ipsam est recusandae autem maxime soluta harum alias inventore, animi laudantium culpa
+          voluptatibus architecto iste incidunt quaerat! Tempora a commodi provident dicta repudiandae exercitationem,
+          veniam eos illum earum praesentium nam reiciendis. Corporis voluptate reprehenderit veniam totam nobis maiores
+          incidunt, quibusdam necessitatibus odit suscipit sequi in. Consequatur iusto odit praesentium? Molestiae
+          voluptatum voluptatibus error soluta consequuntur blanditiis dolorum odit aut hic unde fuga excepturi eum
+          veritatis quas sequi officia, placeat esse pariatur rerum. Quas nihil labore hic error architecto, laudantium
+          atque neque recusandae obcaecati ad esse, dicta tempora velit optio, autem ratione magni voluptatem inventore
+          dolore nobis nesciunt numquam totam. Reiciendis magni optio illum pariatur obcaecati quos tenetur quia a odit
+          beatae enim sunt, saepe molestias libero ut voluptas delectus tempora vel voluptate in nemo temporibus
+          quibusdam! Dolorem, possimus nesciunt! Consectetur voluptate ab minus tempore, id fugiat sint, hic eos
+          consequuntur sequi eum quidem veritatis. Laboriosam officiis impedit fugit, iure nesciunt aspernatur vel
+          commodi tempora nobis blanditiis, optio aperiam ipsam pariatur assumenda dolor dignissimos aliquam.
+          Cupiditate, dolorem. Ea, mollitia numquam!
+        </p>
+      </div>
+      <div class="pane" style="background: linear-gradient(to top left, rgb(155, 155, 155), rgb(212, 212, 212));">
+        <h1>Pane 3</h1>
+      </div>
+      <div class="pane" style="background: linear-gradient(to top left, rgb(155, 155, 155), rgb(212, 212, 212));">
+        <h1>Pane 4</h1>
+      </div>
     </div>
   </body>
 </html>
