--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
         <li><a class="btn" href="/paper-cutout">Paper Cutout</a></li>
         <li><a class="btn" href="/notification">Notification</a></li>
         <li><a class="btn" href="/swipe-panes">Swipe Panes</a></li>
+        <li><a class="btn" href="/ripple-buttons">Ripple Buttons</a></li>
       </ul>
     </div>
   </body>
