feature/side-menu

--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
         <li><a class="btn" href="/notification">Notification</a></li>
         <li><a class="btn" href="/swipe-panes">Swipe Panes</a></li>
         <li><a class="btn" href="/ripple-buttons">Ripple Buttons</a></li>
+        <li><a class="btn" href="/side-menu">Side Menu</a></li>
       </ul>
     </div>
   </body>
