demo/ripple-buttons update

--- a/src/index.html
+++ b/src/index.html
@@ -10,12 +10,12 @@
     <div class="wrapper">
       <h1>UI Components</h1>
       <ul>
-        <li><a class="btn" href="/text-shadow">Text Shadow</a></li>
-        <li><a class="btn" href="/paper-cutout">Paper Cutout</a></li>
-        <li><a class="btn" href="/notification">Notification</a></li>
-        <li><a class="btn" href="/swipe-panes">Swipe Panes</a></li>
-        <li><a class="btn" href="/ripple-buttons">Ripple Buttons</a></li>
-        <li><a class="btn" href="/side-menu">Side Menu</a></li>
+        <li><a class="btn-ripple" href="/text-shadow">Text Shadow</a></li>
+        <li><a class="btn-ripple" href="/paper-cutout">Paper Cutout</a></li>
+        <li><a class="btn-ripple" href="/notification">Notification</a></li>
+        <li><a class="btn-ripple" href="/swipe-panes">Swipe Panes</a></li>
+        <li><a class="btn-ripple" href="/ripple-buttons">Ripple Buttons</a></li>
+        <li><a class="btn-ripple" href="/side-menu">Side Menu</a></li>
       </ul>
     </div>
   </body>
