--- a/src/notification/index.html
+++ b/src/notification/index.html
@@ -9,8 +9,8 @@
   <body>
     <div class="wrapper">
       <h1>Notification</h1>
-      <button class="btn" id="button1">Press Me</button>
-      <button class="btn" id="button2">Or Me</button>
+      <button class="btn-ripple" id="button1">Press Me</button>
+      <button class="btn-ripple" id="button2">Or Me</button>
     </div>
   </body>
 </html>
