--- a/src/ripple-buttons/index.html
+++ b/src/ripple-buttons/index.html
@@ -11,10 +11,10 @@
       <h1>
         Ripple Buttons
       </h1>
-      <a class="hover-ripple" href="#" rel="noopener noreferrer">
+      <a class="btn-ripple" href="#" rel="noopener noreferrer">
         <span>Hover Me!</span>
       </a>
-      <a class="hover-ripple" href="#" rel="noopener noreferrer">
+      <a class="btn-ripple" href="#" rel="noopener noreferrer">
         <span>And Click Me!</span>
       </a>
     </div>
